syntax = "proto3";

package wallet;

option go_package = "github.com/Aidin1998/finalex/proto/wallet";

import "google/protobuf/decimal.proto";
import "google/protobuf/timestamp.proto";

// Wallet service definition
service WalletService {
  // Deposit operations
  rpc RequestDeposit(DepositRequest) returns (DepositResponse);
  rpc GetDepositAddress(GetDepositAddressRequest) returns (GetDepositAddressResponse);
  
  // Withdrawal operations  
  rpc RequestWithdrawal(WithdrawalRequest) returns (WithdrawalResponse);
  rpc CancelWithdrawal(CancelWithdrawalRequest) returns (CancelWithdrawalResponse);
  
  // Balance operations
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  rpc GetBalances(GetBalancesRequest) returns (GetBalancesResponse);
  
  // Transaction operations
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
  rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsResponse);
}

// Request/Response messages
message DepositRequest {
  string user_id = 1;
  string asset = 2;
  string network = 3;
}

message DepositResponse {
  string transaction_id = 1;
  string address = 2;
  string qr_code = 3;
  google.protobuf.Timestamp expires_at = 4;
}

message GetDepositAddressRequest {
  string user_id = 1;
  string asset = 2;
  string network = 3;
}

message GetDepositAddressResponse {
  string address = 1;
  string tag = 2;
  string qr_code = 3;
}

message WithdrawalRequest {
  string user_id = 1;
  string asset = 2;
  string amount = 3;
  string address = 4;
  string tag = 5;
  string network = 6;
}

message WithdrawalResponse {
  string transaction_id = 1;
  string status = 2;
  string estimated_time = 3;
  string fee = 4;
  string net_amount = 5;
}

message CancelWithdrawalRequest {
  string transaction_id = 1;
  string reason = 2;
}

message CancelWithdrawalResponse {
  bool success = 1;
  string message = 2;
}

message GetBalanceRequest {
  string user_id = 1;
  string asset = 2;
}

message GetBalanceResponse {
  string asset = 1;
  string available = 2;
  string locked = 3;
  string total = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message GetBalancesRequest {
  string user_id = 1;
}

message GetBalancesResponse {
  repeated GetBalanceResponse balances = 1;
}

message GetTransactionRequest {
  string transaction_id = 1;
}

message GetTransactionResponse {
  string id = 1;
  string user_id = 2;
  string asset = 3;
  string amount = 4;
  string direction = 5;
  string status = 6;
  string tx_hash = 7;
  string from_address = 8;
  string to_address = 9;
  string network = 10;
  int32 confirmations = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

message GetTransactionsRequest {
  string user_id = 1;
  string asset = 2;
  string direction = 3;
  string status = 4;
  int32 limit = 5;
  int32 offset = 6;
}

message GetTransactionsResponse {
  repeated GetTransactionResponse transactions = 1;
  int32 total = 2;
}
